<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeOne_A"
    android:orientation="vertical"
    android:background="#FFF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/splash_img_4"
        android:layout_margin="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/red"
        android:textSize="@dimen/_25sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_1"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_2"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:lineSpacingExtra="@dimen/_5sdp"/>

    <ImageView
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="right"
        android:src="@drawable/welcome_sign"
        android:layout_marginRight="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom">

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/welcome_next" />

    </LinearLayout>

</LinearLayout>