<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeOne_A"
    android:orientation="vertical"
    android:background="#FFF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:src="@drawable/splash_img_4"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_we_are_different"
        android:textColor="@color/red"
        android:textSize="@dimen/_22sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_3"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_4"
        android:textColor="#00F"
        android:textSize="@dimen/_13sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:lineSpacingExtra="@dimen/_5sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_5"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:lineSpacingExtra="@dimen/_3sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp">

        <ImageView
            android:id="@+id/img_start"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/welcome_get_started"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:id="@+id/img_sign_1"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/welcome_sign_1"
            android:layout_marginTop="@dimen/_5sdp"/>

        <ImageView
            android:id="@+id/img_sign_2"
            android:layout_toEndOf="@id/img_sign_1"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/welcome_sign_3"
            android:layout_marginTop="@dimen/_35sdp"/>

        <ImageView
            android:id="@+id/img_sign_3"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/welcome_sign_2"/>

    </RelativeLayout>

</LinearLayout>