<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/Login_Phone_A"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dinosoftlabs.binder.Accounts.Login_Phone_A">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewfillper">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/splash_img_4"
                    android:layout_margin="@dimen/_10sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number_verification"
                        android:textColor="#00F"
                        android:textSize="@dimen/_18sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phonetext"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:lineSpacingExtra="6dp"
                        android:layout_margin="@dimen/_20sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_input_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:id="@+id/select_country">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Nigeria"
                                android:textSize="@dimen/_12sdp"
                                android:id="@+id/countrytxt"
                                android:textColor="@color/black"
                                android:layout_centerVertical="true"/>
                            <ImageButton
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="fitXY"
                                android:layout_alignParentRight="true"
                                android:background="@color/transparent"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_forword_black"/>
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/dark_gray"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:text="+234"
                                android:id="@+id/countrycodetxt"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:layout_centerVertical="true"/>

                            <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/dark_gray"
                                android:layout_toRightOf="@+id/countrycodetxt"/>

                            <EditText
                                android:id="@+id/phonetxt"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_toEndOf="@+id/countrycodetxt"
                                android:layout_toRightOf="@+id/countrycodetxt"
                                android:background="@color/transparent"
                                android:hint="your phone number"
                                android:inputType="phone"
                                android:textColor="@color/black"
                                android:textColorHint="@color/graycolor"
                                android:textSize="15dp" />

                        </RelativeLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/black"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_11sdp"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:text="Example:80552123"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/nextbtn"
                        android:onClick="Nextbtn"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/welcome_next_step"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="@dimen/_180sdp"
                            android:layout_height="@dimen/_160sdp"
                            android:src="@drawable/splash_img_2"
                            android:layout_marginLeft="@dimen/_165sdp"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:src="@drawable/welcome_sign"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_logo1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/splash_img_4"
                android:layout_margin="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_verification"
                    android:textColor="#00F"
                    android:textSize="@dimen/_18sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verifytext"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:lineSpacingExtra="6dp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(234808787654)"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:lineSpacingExtra="6dp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/codelayout"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/d_oval_shape"
                        android:maxLength="1"
                        android:ems="1"
                        android:id="@+id/digitone"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/d_oval_shape"
                        android:layout_marginLeft="10dp"
                        android:ems="1"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:id="@+id/digittwo"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/d_oval_shape"
                        android:layout_marginLeft="10dp"
                        android:ems="1"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:id="@+id/digitthree"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/d_oval_shape"
                        android:layout_marginLeft="10dp"
                        android:ems="1"
                        android:textColor="@color/black"
                        android:maxLength="1"
                        android:id="@+id/digitfour"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/d_oval_shape"
                        android:layout_marginLeft="10dp"
                        android:ems="1"
                        android:textColor="@color/black"
                        android:maxLength="1"
                        android:id="@+id/digitfive"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/d_oval_shape"
                        android:layout_marginLeft="10dp"
                        android:ems="1"
                        android:textColor="@color/black"
                        android:maxLength="1"
                        android:id="@+id/digitsix"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:text="I did't receive a code!"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/pink_color"
                    android:textSize="18dp"
                    android:onClick="resendCode"
                    android:text="Resend"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/confirmbtn"
                    android:onClick="verifyCode"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/welcome_next_step"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|center_horizontal"
                    android:layout_margin="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/welcome_kola_nut"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:src="@drawable/welcome_sign_4"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"/>

            </RelativeLayout>

        </LinearLayout>

    </ViewFlipper>
</RelativeLayout>
